syntax = "proto3";
package influxdata.iox.schema.v1;
option go_package = "github.com/influxdata/iox/schema/v1";

service SchemaService {
  // Get the schema for a namespace
  rpc GetSchema(GetSchemaRequest) returns (GetSchemaResponse);
}

message GetSchemaRequest {
  // The namespace for which to fetch the schema
  string namespace = 1;
}

message GetSchemaResponse {
  NamespaceSchema schema = 1;
}

message NamespaceSchema {
  // Namespace ID
  int64 id = 1;
  // Kafka Topic ID
  int64 kafka_topic_id = 2;
  // Query Pool ID
  int64 query_pool_id = 3;
  // Map of Table Name -> Table Schema
  map<string, TableSchema> tables = 4;
}

message TableSchema {
  // Table ID
  int64 id = 1;
  // Map of Column Name -> Table Schema
  map<string, ColumnSchema> columns = 2;
}

message ColumnSchema {
  reserved 2;

  // Column ID
  int64 id = 1;
  // Column type
  ColumnType column_type = 3;

  // Column data type.
  enum ColumnType {
        // An unknown column data type.
        COLUMN_TYPE_UNSPECIFIED = 0;

        COLUMN_TYPE_I64 = 1;
        COLUMN_TYPE_U64 = 2;
        COLUMN_TYPE_F64 = 3;
        COLUMN_TYPE_BOOL = 4;
        COLUMN_TYPE_STRING = 5;
        COLUMN_TYPE_TIME = 6;
        COLUMN_TYPE_TAG = 7;
    }
}

